--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.encoding.force-response=true
 
 # Oracle ??
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=countingbell
+spring.datasource.username=c##countingbell
 spring.datasource.password=countingbell
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
