feat_이메일보내기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,13 @@ spring.servlet.multipart.location=D:\\countingbell-frontend\\public\\upload
 spring.servlet.multipart.max-request-size=500MB
 spring.servlet.multipart.max-file-size=300MB
 countingbell.upload.path=D:\\countingbell-frontend\\public\\upload
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nimoos9480@gmail.com
+spring.mail.password=gyvr pkqz llqn ynef
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+
