--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,15 +8,15 @@ spring.datasource.password=countingbell
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.servlet.multipart.enabled=true
 
-spring.servlet.multipart.location=C:\\project\\countingbell-frontend\\public\\upload
-spring.servlet.multipart.max-request-size=500MB
-spring.servlet.multipart.max-file-size=300MB
-countingbell.upload.path=C:\\project\\countingbell-frontend\\public\\upload
-
-#spring.servlet.multipart.location=D:\\countingbell-frontend\\public\\upload
+#spring.servlet.multipart.location=C:\\project\\countingbell-frontend\\public\\upload
 #spring.servlet.multipart.max-request-size=500MB
 #spring.servlet.multipart.max-file-size=300MB
-#countingbell.upload.path=D:\\countingbell-frontend\\public\\upload
+#countingbell.upload.path=C:\\project\\countingbell-frontend\\public\\upload
+
+spring.servlet.multipart.location=D:\\countingbell-frontend\\public\\upload
+spring.servlet.multipart.max-request-size=500MB
+spring.servlet.multipart.max-file-size=300MB
+countingbell.upload.path=D:\\countingbell-frontend\\public\\upload
 
 
 spring.mail.host=smtp.gmail.com
