feat:2023.11.04 경미 진짜 최종수정본

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,26 +3,20 @@ server.servlet.encoding.force-response=true
 
 # Oracle ??
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=countingbell
+spring.datasource.username=c##countingbell
 spring.datasource.password=countingbell
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.servlet.multipart.enabled=true
 
-spring.servlet.multipart.location=C:\\project\\countingbell-frontend\\public\\upload
-spring.servlet.multipart.max-request-size=500MB
-spring.servlet.multipart.max-file-size=300MB
-countingbell.upload.path=/Users/parkjinsil/Desktop/countingbell-frontend/public/upload
-
-#spring.servlet.multipart.location=D:\\countingbell-frontend\\public\\upload
 #spring.servlet.multipart.location=C:\\project\\countingbell-frontend\\public\\upload
 #spring.servlet.multipart.max-request-size=500MB
 #spring.servlet.multipart.max-file-size=300MB
-#countingbell.upload.path=C:\\project\\countingbell-frontend\\public\\upload
+#countingbell.upload.path=/Users/parkjinsil/Desktop/countingbell-frontend/public/upload
 
-spring.servlet.multipart.location=D:\\countingbell-frontend\\public\\upload
+spring.servlet.multipart.location=C:\\project\\countingbell-frontend\\public\\upload
 spring.servlet.multipart.max-request-size=500MB
 spring.servlet.multipart.max-file-size=300MB
-countingbell.upload.path=D:\\countingbell-frontend\\public\\upload
+countingbell.upload.path=C:\\project\\countingbell-frontend\\public\\upload
 
 
 spring.mail.host=smtp.gmail.com
