--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.servlet.encoding.force=true
 server.servlet.encoding.force-response=true
 
 # Oracle ??
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=c##countingbell
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=countingbell
 spring.datasource.password=countingbell
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.servlet.multipart.enabled=true
@@ -16,7 +16,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=C:\\project\\countingbell-frontend\\public\\upload
 spring.servlet.multipart.max-request-size=500MB
 spring.servlet.multipart.max-file-size=300MB
-countingbell.upload.path=C:\\project\\countingbell-frontend\\public\\upload
+countingbell.upload.path=/Users/jhchoi/countingbell-frontend/public/upload
 
 
 spring.mail.host=smtp.gmail.com
