--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,12 @@ spring.servlet.multipart.enabled=true
 #spring.servlet.multipart.location=C:\\project\\countingbell-frontend\\public\\upload
 #spring.servlet.multipart.max-request-size=500MB
 #spring.servlet.multipart.max-file-size=300MB
-countingbell.upload.path=/Users/parkjinsil/Desktop/countingbell-frontend/public/upload
+#countingbell.upload.path=/Users/parkjinsil/Desktop/countingbell-frontend/public/upload
 
-spring.servlet.multipart.location=C:\\project\\countingbell-frontend\\public\\upload
+spring.servlet.multipart.location=D:\\countingbell-frontend\\public\\upload
 spring.servlet.multipart.max-request-size=500MB
 spring.servlet.multipart.max-file-size=300MB
-#countingbell.upload.path=C:\\project\\countingbell-frontend\\public\\upload
+countingbell.upload.path=D:\\countingbell-frontend\\public\\upload
 
 
 spring.mail.host=smtp.gmail.com
